# memecoin-leding

./: .dockerignore  .env.example  .gitignore  ADMIN_API_KEY_SECURITY.md  Anchor.toml  Cargo.toml  DOCKER_BUILD_FIXES.md  HELIUS_RPC_SETUP.md  JUPITER_3KEY_SETUP.md  JUPITER_MULTIKEY_IMPLEMENTATION.md  MAINNET_DEPLOYMENT_CHECKLIST.md  MAINNET_QUICKSTART.md  MULTI_INSTANCE_LIQUIDATOR.md  Makefile  PRICE_SERVICE_CLEANUP.md  README.md  REPAY_LOAN_FIX.md  RPC_SECURITY_IMPLEMENTATION.md  SECURITY_RECOMMENDATIONS.md  SECURITY_VERIFICATION_CHECKLIST.md  UPDATE_POOL_ADDRESS_GUIDE.md  WHITELIST_SETUP.md  deploy.md  docker-compose.backup.yml  docker-compose.infra.yml  docker-compose.production.yml  docker-compose.yml  ecosystem.config.cjs  pnpm-lock.yaml  project_context.md  run-test.sh  security_book.md  simulate-loan-calculation.ts  test-auth.js  test-debug.ts  test-deviation.ts  test-init.js  test-jupiter-setup.env  test-runner.js  test-simple.ts
.github/workflows/: test.yml.example
apps/server/: .env.example  Dockerfile  SECURITY_PRACTICES.md  check-types.sh  debug-env.js  debug-env.mjs  fix-logger-errors.cjs  test-lp.sh  vitest.config.ts
apps/telegram-bot/: Dockerfile
apps/web/: .env.example  (+6 more)
docs/: TELEGRAM_SETUP.md
infrastructure/: README.md
programs/memecoin-lending/: Cargo.toml  README.md
programs/memecoin-lending/src/: error.rs  events.rs  lib.rs  lib.rs.backup  state.rs  utils.rs
programs/memecoin-lending/src/instructions/: admin.rs  create_loan.rs  fee_distribution.rs  fund_treasury.rs  initialize.rs  liquidate.rs  mod.rs  repay_loan.rs  update_fees.rs  update_token_config.rs  whitelist_token.rs
programs/memecoin-lending/src/instructions/staking/: admin_staking.rs  advance_epoch.rs  claim_rewards.rs  deposit_rewards.rs  distribute_rewards.rs  emergency_drain_rewards.rs  epoch_helpers.rs  helpers.rs  initialize_staking.rs  mod.rs  stake.rs  unstake.rs  update_staking_config.rs
programs/memecoin-lending/src/swap/: jupiter.rs  mod.rs  pumpfun.rs
scripts/: FEE_CLAIMING.md  POST_DEPLOYMENT.md  admin-cli.ts  analyze-pumpswap-pool.ts  check-protocol.Ts  check-protocol.ts  claim-creator-fees.ts  clear-old-data.ts  cli-utils.ts  close-current-deployment.ts  config.ts  create-loan.ts  db-migrate-direct.sh  debug-staking-state.ts  debug-telegram.js  debug-user-stake.ts  deploy-and-update.sh  deploy-fresh.sh  deploy-full.ts  deploy-program.ts  deploy.ts  deployment-status.ts  deployment-store.ts  deposit-rewards.ts  devnet-integration-tests.ts  devnet-test-suite.ts  diagnose-pumpswap-pool.ts  diagnose-pumpswap-price.ts  diagnose-pumpswap.ts  distribute-accumulated-fees.ts  emergency-drain-rewards.ts  emergency-shutdown.ts  emergency-withdraw-rewards.ts  find-correct-pool.ts  fix-deployment-config.ts  fix-token-pooltype.ts  fund-treasury.ts  get-loans.ts  get-protocol-state.ts  get-token-configs.ts  (+40 more)
tests/: memecoin-lending.ts  smoke-test.sh  test-fixes.patch
(+195 files in other folders)
