[package]
name = "memecoin-lending"
version = "0.1.0"
description = "Memecoin Collateralized Lending Protocol on Solana"
edition = "2021"
license = "MIT"
authors = ["Memecoin Lending Team"]

[lib]
crate-type = ["cdylib", "lib"]
name = "memecoin_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18"

[dev-dependencies]
anchor-client = "0.30.1"