[package]
name = "memecoin-lending"
version = "0.1.0"
description = "Memecoin Collateralized Lending Protocol on Solana"
edition = "2021"
license = "MIT"
authors = ["Memecoin Lending Team"]

[lib]
crate-type = ["cdylib", "lib"]
name = "memecoin_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["custom-heap"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
anchor-client = "0.31.1"